# UrsusAI

./: .env.example  .gitignore  README.md  package-lock.json  package.json  presentation.html
scripts/: check-creation-fee.js  check-wallet.js  test-agent-creation-debug.js  test-agent-creation.js  update-creation-fee.js
ursus-backend/: .env.example  README.md  jest.config.js  package-lock.json  package.json  server.js  simple-bonding-test.js  test-bonding-curve.js  test-factory.js  test-groq.js  test-huggingface.js  test-x402-service.js
ursus-backend/agent-creator-services/: package-lock.json  package.json  tsconfig.json
ursus-backend/config/: database.js
ursus-backend/idl/: agent_factory.json
ursus-backend/middleware/: apiMiddleware.js  securityMiddleware.js  x402Middleware.js
ursus-backend/models/: Agent.js  AgentChat.js  ChatMessage.js  Comment.js  Portfolio.js  Trade.js  (+3 more)
ursus-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
ursus-solana/: .env.example  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
ursus-solana/programs/agent-factory/: Cargo.toml  Xbuild.rs
ursus-solana/programs/agent-factory/src/: errors.rs  lib.rs
ursus-solana/programs/agent-factory/src/instructions/: buy_tokens.rs  call_agent_service.rs  configure_x402.rs  create_agent.rs  graduate_agent.rs  initialize.rs  mod.rs  pay_for_service.rs  sell_tokens.rs  update_fee.rs  update_x402.rs
ursus-solana/programs/agent-factory/src/state/: agent.rs  bonding_curve.rs  factory.rs  mod.rs  x402_config.rs
(+181 files in other folders)
