[package]
name = "agent-factory"
version = "0.1.0"
description = "URSUS AI Agent Factory - Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

